--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,6 +18,11 @@
       type="text/css"
       href="//fonts.googleapis.com/css?family=Open+Sans"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//fonts.googleapis.com/css?family=Montserrat"
+    />
   </head>
   <body>
     <div id="root"></div>
