--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,6 +23,10 @@
       type="text/css"
       href="//fonts.googleapis.com/css?family=Montserrat"
     />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.13.0/css/all.css"
+    />
   </head>
   <body>
     <div id="root"></div>
